# English-For-The-Blind.github.io

./: .gitignore  README.md  hugo_stats.json  package-lock.json  package.json
assets/scss/common/: _custom.scss
config/_default/: hugo.toml  module.toml  params.toml
config/_default/menus/: menus.en.toml
content/: _index.md
content/docs/intro/: _index.md  welcome.md
content/docs/practice/: _index.md  practice_3-12.md
content/docs/reference/: _index.md
content/docs/special_events/: _index.md  christmas_eve.md  halloween.md
content/docs/unit3/: _index.md  unit3b.md  unit3c.md
content/docs/unit4/: _index.md  unit4a.md  unit4b.md  unit4c.md
content/docs/unit5/: _index.md  unit5a.md  unit5b.md  (+1 more)
custom_layouts/partials/: inline-image.html
custom_layouts/shortcodes/: audio-player.html  audio-with-controls.html
layouts/: index.html
python_scripts/: add_cleaned_row.py  make_audios.py  make_conversation.py  mp3_to_wav.py  pad_audio.py  pyproject.toml
python_scripts/processed_lessions/unit-6B/: listening_conversation_part1.txt  listening_conversation_part2.txt  listening_conversation_part3.txt  sentences.md  sentences_audio.md  vocabularies.md  vocabularies_audio.md
python_scripts/processed_lessions/unit-6C/: grammar_listening_part1.txt  grammar_listening_part2.txt  sentences.md  sentences_cleaned.md  sentences_cleaned_audio.md  vocabularies.md  vocabularies_cleaned.md  vocabularies_cleaned_audio.md
python_scripts/processed_lessions/unit-6C/listening/: part1.txt  part2.txt  part3.txt  part4.txt
python_scripts/raw_lessions/: unit-6B.md  unit-6C.md
(+9 files in other folders)
