[project]
name = "python-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.7.12",
    "markitdown>=0.0.1a3",
    "mdpd>=0.2.1",
    "nltk>=3.9.1",
    "pip>=25.0",
    "pydub>=0.25.1",
    "rich>=13.9.4",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
]
